codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.1.2 -> 9.9.9                                                                        │
│ Run sh -c 'curl -fsSL                                                                                      │
│ https://github.com/Kartvya69/recodex/releases/latest/download/recodex-x86_64-unknown-linux-gnu.tar.gz |    │
│ sudo tar -xz -C /usr/local/bin recodex' to update.                                                         │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/Kartvya69/recodex/releases/latest                                                       │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
