codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.1.2 -> 9.9.9                                                                        │
│ Run powershell -NoProfile -Command 'iwr                                                                    │
│ https://github.com/Kartvya69/recodex/releases/latest/download/recodex-x86_64-pc-windows-msvc.zip -OutFile  │
│ $env:TEMP'"\\recodex.zip; Expand-Archive "'$env:TEMP'"\\recodex.zip -DestinationPath                       │
│ "'$env:LOCALAPPDATA'"\\recodex -Force" to update.                                                          │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/Kartvya69/recodex/releases/latest                                                       │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
